# raysurfer-python

./: .gitignore  CLAUDE.md  README.md  github_trending.py  pyproject.toml  test_bidflow_comparison.py
.github/workflows/: ci.yml
demo/: before_after_comparison.md  cache_speedup_demo.py  real_comparison_test.py  test_variety.py
examples/email-agent/: .gitignore  LISTENERS_SPEC.md  README.md
examples/email-agent/ccsdk/: listeners-manager.ts  websocket-handler.ts
examples/excel-demo/: .gitignore  README.md
examples/hello-world/: package-lock.json
examples/hello-world-v2/: README.md  v2-examples.ts
examples/research-agent/: .gitignore
examples/research-agent/research_agent/: agent.py
examples/research-agent/research_agent/utils/: message_handler.py  subagent_tracker.py
examples/resume-generator/: .gitignore  README.md  package.json  resume-generator.ts
examples/simple-chatapp/: .gitignore
src/raysurfer/: __init__.py  accessible.py  agent.py  client.py  config.py  exceptions.py  logging.py  programmatic.py  runner.py  sdk_client.py  sdk_types.py  types.py
tests/: __init__.py  conftest.py  test_accessible.py  test_agent.py  test_cache_hits.py  test_client.py  test_log_search.py  test_logging_alias.py  test_programmatic.py  test_sdk_client.py  test_sdk_client_defaults.py  test_upload_compat.py
