[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raysurfer"
version = "0.11.0"
# Old description: "Semantic code caching for LLM agents"
# Old description: "Code reputation layer for AI agents"
description = "AI maintained skills for vertical agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Raymond Xu" }
]
keywords = ["ai", "agents", "code-blocks", "retrieval", "embeddings", "claude", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "claude-agent-sdk>=0.1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://www.raysurfer.com"
Repository = "https://github.com/raymondxu/raysurfer-python"

[tool.hatch.build.targets.sdist]
exclude = [".entire/"]

[tool.hatch.build.targets.wheel]
packages = ["src/raysurfer"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["examples/", "demo/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402", "E501", "E731"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
